@@ -1,5 +1,13 @@
 2009-04-29  Don Scorgie  <dscorgie@src.gnome.org>
 
+	* src/yelp-window.c: 
+	* src/yelp-utils.c: 
+	* src/yelp-utils.h: 
+	Add plain text handler
+	Bug #565502 - patch from Josselin Mouette
+
+2009-04-29  Don Scorgie  <dscorgie@src.gnome.org>
+
 	* src/yelp-bookmarks.c: 
 	* src/yelp-window.c: 
 	Convert gnome-config useage to GKeyFile
